--- a/src/app/shared/footer/_footer-responsive.scss
+++ b/src/app/shared/footer/_footer-responsive.scss
@@ -66,7 +66,10 @@
     }
   }
 
+
+
   .legal a {
+    white-space: nowrap;
     color: var(--color-white);
   }
 }
